--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-    background-color: #323232;
-    color:rgb(178, 178, 178);
-    font-family: Arial, sans-serif;
+    background-color: #1d2127;
+    color: #fff;
+    font-family: "Overpass Mono", monospace;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -19,4 +21,24 @@ h1 {
     height: 40px;
     width: 40px;
     padding: 4px;
+}
+
+.container {
+    margin-top: 30px;
+    padding: 0 60px 0 60px;
+}
+
+.post {
+    background-color: #5e5e5e;
+    margin-bottom: 15px;
+    padding: 5px 20px 5px 20px;
+    border-radius: 12px;
+}
+
+.post h4 {
+    color: #98c379;
+}
+
+.post span {
+    color: #61afef;
 }
